[workspace]

members = [
    "axhal",
    "axalloc",
    "crate_interface",
    "axlog",
    "axruntime",
    "page_table",
    "page_table_entry",

    "top_helloworld",
    "top_memtest",
#    "apps/display",
#    "apps/exception",
#    "apps/memtest",
#    "apps/net/echoserver",
#    "apps/net/httpclient",
#    "apps/net/httpserver",
#    "apps/task/parallel",
#    "apps/task/sleep",
#    "apps/task/yield",
#
#    "crates/allocator",
#    "crates/arm_gic",
#    "crates/driver_block",
#    "crates/driver_common",
#    "crates/driver_display",
#    "crates/driver_net",
#    "crates/driver_virtio",
#    "crates/handler_table",
#    "crates/lazy_init",
#    "crates/linked_list",
#    "crates/memory_addr",
#    "crates/ratio",
#    "crates/scheduler",
#    "crates/spinlock",
#    "crates/timer_list",
#    "crates/tuple_for_each",
#
#    "modules/axconfig",
#    "modules/axdisplay",
#    "modules/axdriver",
#    "modules/axerror",
#    "modules/axnet",
#    "modules/axsync",
#    "modules/axtask",
#
#    "ulib/libax",
#    "ulib/c_libax/libax_bindings",
]
