[workspace]

members = [
    "axhal",
    "axalloc",
    "crate_interface",
    "axlog",
    "axtask",
    "axruntime",
    "page_table",
    "page_table_entry",

    "top_helloworld",
    "top_memtest",
    "top_parallel",
    "top_sleep",
    "top_yield",
    "top_exception",
    "top_echoserver",
#    "apps/display",
#    "apps/net/httpclient",
#    "apps/net/httpserver",
#
#    "crates/allocator",
#    "crates/arm_gic",
#    "crates/driver_block",
#    "crates/driver_common",
#    "crates/driver_display",
#    "crates/driver_net",
#    "crates/driver_virtio",
#    "crates/handler_table",
#    "crates/lazy_init",
#    "crates/linked_list",
#    "crates/memory_addr",
#    "crates/ratio",
#    "crates/scheduler",
#    "crates/spinlock",
#    "crates/timer_list",
#    "crates/tuple_for_each",
#
#    "modules/axconfig",
#    "modules/axdisplay",
#    "modules/axdriver",
#    "modules/axerror",
#    "modules/axnet",
#    "modules/axsync",
#
#    "ulib/libax",
#    "ulib/c_libax/libax_bindings",
]
