[package]
name = "startup"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#platform-qemu-virt-riscv = ["axconfig/platform-qemu-virt-riscv"]
#paging = ["axalloc", "page_table"]
#default = []

[dependencies]
riscv = "0.10"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
#
#log = "0.4"
#cfg-if = "1.0"
bitflags = "1.3"
#static_assertions = "1.1.0"
axconfig = { path = "../axconfig" }
#axalloc = { path = "../axalloc", optional = true }
#spinlock = { path = "../../crates/spinlock" }
#ratio = { path = "../../crates/ratio", optional = true }
#lazy_init = { path = "../../crates/lazy_init" }
#page_table = { path = "../../crates/page_table", optional = true }
#page_table_entry = { path = "../../crates/page_table_entry", optional = true }
memory_addr = { path = "../memory_addr" }
#handler_table = { path = "../../crates/handler_table" }
crate_interface = { path = "../crate_interface" }

[build-dependencies]
cc = "1.0"
#axconfig = { path = "../axconfig" }
