[package]
name = "axhal"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
platform-qemu-virt-riscv = ["axconfig/platform-qemu-virt-riscv"]
#paging = ["axalloc", "page_table"]
default = []

[dependencies]
log = "0.4"
cfg-if = "1.0"
bitflags = "1.3"
#static_assertions = "1.1.0"
axconfig = { path = "../axconfig" }
axlog = { path = "../axlog" }
axalloc = { path = "../axalloc" }
spinlock = { path = "../spinlock" }
#ratio = { path = "../ratio", optional = true }
lazy_init = { path = "../lazy_init" }
page_table = { path = "../page_table" }
page_table_entry = { path = "../page_table_entry" }
memory_addr = { path = "../memory_addr" }
handler_table = { path = "../handler_table" }
crate_interface = { path = "../crate_interface" }

riscv = "0.10"
sbi-rt = { version = "0.0.2", features = ["legacy"] }

[build-dependencies]
axconfig = { path = "../axconfig" }
