[package]
name = "axtask"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#multitask = [ # without the feature, can still use the empty yield_now() and exit()
#"dep:axconfig", "dep:spinlock", "dep:lazy_init",
#    "dep:memory_addr", "dep:scheduler", "dep:timer_list"
#]
#preempt = []

#sched_fifo = ["multitask"]
#sched_rr = ["multitask", "preempt"]
#default = ["sched_fifo"]

[dependencies]
cfg-if = "1.0"
log = "0.4"
axhal = { path = "../axhal" }
axconfig = { path = "../axconfig" }
spinlock = { path = "../spinlock" }
lazy_init = { path = "../lazy_init" }
memory_addr = { path = "../memory_addr" }
scheduler = { path = "../scheduler" }
timer_list = { path = "../timer_list" }

[dev-dependencies]
rand = "0.8"
